--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
-title: Time Machine theme
-description: Time Machine is a theme for GitHub Pages.
-show_downloads: true
-google_analytics:
+title: 一人二狗
+description: A man，a car
+show_downloads: false
 theme: jekyll-theme-time-machine
